# simple_monitor

./: .gitignore  CMakeLists.txt  LICENSE  README.md  app.manifest  app.rc  dev-rebuild.ps1  simple_monitor.ini.bak  simple_monitor.ini.sample
src/: main.cpp
